Fix: message width causing white space

--- a/src/css/minter.css
+++ b/src/css/minter.css
@@ -76,7 +76,7 @@
         height: 60px;
         font-family: "Fredoka One", cursive;
         position: relative;
-        top: 180px;
+        top: 80px;
         left: 100px;
         }
     
@@ -191,6 +191,11 @@
             font-family: "Fredoka One", cursive;
             text-align: center !important;
             position: relative;
+        }
+
+        #message {
+            margin: auto;
+            width: auto;
         }
         
     }
